@@ -1,3 +1,6 @@
+2014-11-05  Kirit Saelensminde  <kirit@felspar.com>
+ Only set Date and Host headers if they're not already set.
+
 2014-05-31  Kirit Saelensminde  <kirit@felspar.com>
  Be absolutely sure that the URL parser lock is held when the parsers destruct.
 
